2012-01-08  Ulrich Drepper  <drepper@gmail.com>

	* io/bits/poll2.h: Add __BEGIN/__END_DECLS.

	* io/Makefile (headers): Add bits/poll2.h.

2011-01-05  Will Schmidt  <will_schmidt@vnet.ibm.com>

	* sysdeps/unix/sysv/linux/powerpc/powerpc32/getcontext.S: Fix a
	typo #include statement.

2012-01-08  Ulrich Drepper  <drepper@gmail.com>

	* include/sys/cdefs.h: Define __attribute_alloc_size.
	* catgets/gencat.c: Add alloc_size attribute and apply consistently
	the malloc attribute to xmalloc, xcalloc, xrealloc, and xstrdup.
	* elf/pldd.c: Likewise.
	* iconv/iconv_charmap.c: Likewise.
	* iconv/iconvconfig.c: Likewise.
	* iconv/strtab.c: Likewise.
	* locale/programs/locale.c: Likewise.
	* locale/programs/localedef.h: Likewise.
	* locale/programs/simple-hash.c: Likewise.
	* nscd/nscd.h: Likewise.
	* nss/makedb.c: Likewise.
	* sysdeps/generic/ldconfig.h: Likewise.
	* locale/programs/localedef.c: Remove xmalloc prototype.
	* nscd/mem.c: Remove xmalloc and xcalloc prototypes.

2012-01-05  Paul Pluzhnikov  <ppluzhnikov@google.com>

	* stdio-common/vfscanf.c (_IO_vfscanf_internal): Use alloca when
	appropriate.

2012-01-08  Ulrich Drepper  <drepper@gmail.com>

	* math/Makefile (tests): Add tst-CMPLX.
	* math/tst-CMPLX.c: New file.

	* math/complex.h (CMPLXL): Fix typo.

	* debug/Makefile (routines): Add poll_chk and ppoll_chk.
	* debug/Versions: Export __pool_chk and __ppoll_chk from libc for
	GLIBC_2.16.
	* debug/tst-chk1.c: Add poll and ppoll tests.
	* io/sys/poll.h: Include bits/poll2.h for _FORTIFY_SOURCE.
	* include/sys/poll.h: Add hidden proto for ppoll.
	* sysdeps/unix/sysv/linux/ppoll.c: Add hidden def.
	* sysdeps/mach/hurd/ppoll.c: Likewise.
	* io/ppoll.c: Likewise.
	* debug/poll_chk.c: New file.
	* debug/ppoll_chk.c: New file.
	* include/bits/poll2.h: New file.
	* io/bits/poll2.h: New file.

	[BZ #1350]
	* math/complex.h (CMPLX, CMPLXF, CMPLXL): Define.

	* configure.in: static is always set to yes.  Remove.
	* config.make.in: Don't set build-static.